Added Gradle Wrapper. Added an icon. Minor changes.